--- a/index.html
+++ b/index.html
@@ -13,46 +13,38 @@
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/9b1e3e940f.js" crossorigin="anonymous"></script>
 
+    <!-- Main Stylesheet -->
+    <link rel="stylesheet" href="/css/style.css">
+
     <title>MPeixoto Advogados - Quite agora mesmo suas dívidas!</title>
 </head>
 
 <body>
-    <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#">
-                    <img src="./img/logo.png" alt="" height="110" class="d-inline-block align-text-top">
+    <header id="header">
+        <div id="header-content">
+            <figure>
+                <a href="/">
+                    <!-- <img src="/img/logo.png" alt="logo"> -->
+                    LogoSite
                 </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Quem somos</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                                data-bs-toggle="dropdown" aria-expanded="false">
-                                Saiba mais
-                            </a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="#">Como funciona</a></li>
-                                <li><a class="dropdown-item" href="#">Ajuda</a></li>
-                            </ul>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Sobre</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
+            </figure>
+            <nav>
+                <ul class="nav-bar-links">
+                    <li>
+                        <a href="/">Home</a>
+                    </li>
+                    <li>
+                        <a href="/quem-somos">Quem somos</a>
+                    </li>
+                    <li>
+                        <a href="/ajuda">Sobre</a>
+                    </li>
+                    <li>
+                        <a href="/contato">Contato</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
     </header>
 
     <main>
@@ -64,10 +56,10 @@
                         <p>Sua liberdade financeira está a poucos cliques de você!</p>
                     </div>
                     <div class="main-hero-left-card">
-                        <h1>Consulte suas dívidas:</h1>
+                        <h1>Consulte suas dívidas</h1>
                         <p>É rápido e totalmente gratuito!</p>
                         <form action="">
-                            <input type="text" placeholder="Digite seu CPF">
+                            <input inputmode="numeric" placeholder="Digite seu CPF">
                             <button type="submit">Consultar CPF</button>
                         </form>
                     </div>
@@ -75,11 +67,12 @@
                         <img src="/img/selo-anti-fraude.svg" alt="selo-anti-fraude">
                     </div>
                 </div>
-                <div class="-main-hero-right">
-                    <img src="/img/mulher.png" alt="imagem-mulher">
+                <div class="main-hero-right">
+                    <img src="/img/mulher5.png" alt="imagem-mulher">
                 </div>
             </div>
         </section>
+
         <section id="whatsapp-section">
             <div class="whatsapp-container">
                 <div class="whatsapp-left">
@@ -90,11 +83,13 @@
                     </p>
                     <a href="#">
                         <span>Negocie pelo WhatsApp</span>
-                        <span><i class="fab fa-whatsapp"></i>(21) 98809-3755</span>
+                        <span><img src="/img/whatsapp.svg" alt="whatsapp-icone"></i> <strong>(21)
+                                98809-3755</strong></span>
                     </a>
                 </div>
                 <div class="whatsapp-right">
-                    <img src="/img/smartphone.webp" alt="smartphone">
+                    <!-- <img src="/img/smartphone.webp" alt="smartphone"> -->
+                    <img src="/img/mulher-ilustracao.jpg" alt="smartphone">
                     <div class="whatsapp-right-footer">
                         <img src="/img/check.svg" alt="check">
                         <span>O selo de perfil verificado e o número exclusivo da Meu Acerto garantem a sua segurança
@@ -105,75 +100,78 @@
         </section>
 
         <section id="diferencial-section">
-            <div class="diferencial-container">
-                <h2>Por que a MP Advogados?</h2>
-                <p>Aqui a sua negociação é simples, digital e do <strong>seu jeito!</strong></p>
-                <div class="diferencial-lista">
-                    <div class="diferencial-lista-item">
-                        <img src="/img/sem-ligacoes.svg" alt="sem-ligacoes">
-                        <h3>Sem ligações chatas</h3>
-                        <p>Resolva tudo no seu tempo, sem telefonemas fora de hora.</p>
-                    </div>
-                    <div class="diferencial-lista-item">
-                        <img src="/img/negociacao-seu-jeito.svg" alt="negociacao-seu-jeito">
-                        <h3>Negociação do seu jeito</h3>
-                        <p>Diga como e o quanto pode pagar.</p>
-                    </div>
-                    <div class="diferencial-lista-item">
-                        <img src="/img/sem-burocracia.svg" alt="sem-burocracia">
-                        <h3>Rápido e sem burocracia</h3>
-                        <p>Você só precisa de 05 minutos para negociar!</p>
-                    </div>
+            <div class="diferencial-lista">
+                <div class="diferencial-lista-h2">
+                    <h2>Por que a LogoSite?</h2>
+                    <p>Aqui a sua negociação é simples, digital e do <strong>seu jeito!</strong></p>
+                </div>
+                <div class="diferencial-lista-item">
+                    <img src="/img/sem-ligacoes.svg" alt="sem-ligacoes">
+                    <h3>Sem ligações chatas</h3>
+                    <p>Resolva tudo no seu tempo, sem telefonemas fora de hora.</p>
+                </div>
+                <div class="diferencial-lista-item">
+                    <img src="/img/negociacao-seu-jeito.svg" alt="negociacao-seu-jeito">
+                    <h3>Negociação do seu jeito</h3>
+                    <p>Diga como e o quanto pode pagar para chegarmos à uma negociação justa.</p>
+                </div>
+                <div class="diferencial-lista-item">
+                    <img src="/img/sem-burocracia.svg" alt="sem-burocracia">
+                    <h3>Rápido e sem burocracia</h3>
+                    <p>Você só precisa de 05 minutos para negociar!</p>
                 </div>
             </div>
         </section>
 
         <section id="features">
-            <div class="features-container">
-                <div class="features-container-item">
-                    <h3>Poder de negociação</h3>
-                    <img src="/img/poder-negociacao.svg" alt="dinheiro-mao">
-                    <p>Negocie da forma mais simplificada possível.</p>
-                </div>
-                <div class="features-container-item">
-                    <h3>Limpe o seu nome</h3>
-                    <img src="/img/limpe-seu-nome.svg" alt="nome-limpo">
-                    <p>O seu nome limpo em até 05 dias úteis.</p>
-                </div>
-                <div class="features-container-item">
-                    <h3>Descontos exclusivos</h3>
-                    <img src="/img/descontos.svg" alt="imagem-porcentagem">
-                    <p>Condições especiais na sua negociação.</p>
-                </div>
+            <div class="features-container-item">
+                <h3>Poder de negociação</h3>
+                <img src="/img/poder-negociacao.svg" alt="dinheiro-mao">
+                <p>Negocie da forma mais simplificada possível.</p>
+            </div>
+            <div class="features-container-item">
+                <h3>Limpe o seu nome</h3>
+                <img src="/img/limpe-seu-nome.svg" alt="nome-limpo">
+                <p>O seu nome limpo em até 05 dias úteis.</p>
+            </div>
+            <div class="features-container-item">
+                <h3>Descontos exclusivos</h3>
+                <img src="/img/descontos.svg" alt="imagem-porcentagem">
+                <p>Condições especiais na sua negociação.</p>
             </div>
         </section>
     </main>
 
     <footer>
         <div class="endereco">
-            <img src="/img/logo.png" height="110" alt="">
-            <p>CNPJ: 53.044.979/0001-66</p>
-            <p>Rua Almirante Barroso, 91</p>
-            <p>Salas 907/908 Centro, Rio de Janeiro</p>
+            <!-- <img src="/img/logo.png" height="110" alt=""> -->
+            <h3>LogoSite</h3>
+            <span>CNPJ: 53.044.979/0001-66</span>
+            <span>Rua Almirante Barroso, 91</span>
+            <span>Salas 907/908 Centro, Rio de Janeiro</span>
         </div>
         <div class="navegacao">
+            <h3>Navegação</h3>
             <ul>
-                <li>Home</li>
-                <li>Quem somos</li>
-                <li>Sobre</li>
+                <li><a href="/home">Home</a></li>
+                <li><a href="/quem-somos">Quem somos</a></li>
+                <li><a href="/sobre">Sobre</a></li>
             </ul>
         </div>
 
         <div class="informacao">
             <h3>Como funciona</h3>
-            <a href="#">Ajuda</a>
+            <ul>
+                <li><a href="#">Passo a passo</a></li>
+                <li><a href="#">Ajuda</a></li>
+            </ul>
         </div>
         <div class="contato">
-            <h3>Siga a MP Advogados</h3>
+            <h3>Siga-nos</h3>
             <ul>
-                <li><i class="fab fa-facebook-f fa-2x"></i></li>
-                <li><i class="fab fa-instagram fa-2x"></i></li>
-                <li><i class="fab fa-linkedin-in fa-2x"></i></li>
+                <li><i class="fab fa-facebook fa-2x"></i></li>
+                <li><i class="fab fa-instagram-square fa-2x"></i></i></li>
+                <li><i class="fab fa-linkedin fa-2x"></i></li>
             </ul>
         </div>
     </footer>
