Fixa endereco css e imagens

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script src="https://kit.fontawesome.com/9b1e3e940f.js" crossorigin="anonymous"></script>
 
     <!-- Main Stylesheet -->
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 
     <title>MPeixoto Advogados - Quite agora mesmo suas dívidas!</title>
 </head>
@@ -64,11 +64,11 @@
                         </form>
                     </div>
                     <div class="main-hero-left-footer">
-                        <img src="/img/selo-anti-fraude.svg" alt="selo-anti-fraude">
+                        <img src="./img/selo-anti-fraude.svg" alt="selo-anti-fraude">
                     </div>
                 </div>
                 <div class="main-hero-right">
-                    <img src="/img/mulher5.png" alt="imagem-mulher">
+                    <img src="./img/mulher5.png" alt="imagem-mulher">
                 </div>
             </div>
         </section>
@@ -83,15 +83,15 @@
                     </p>
                     <a href="#">
                         <span>Negocie pelo WhatsApp</span>
-                        <span><img src="/img/whatsapp.svg" alt="whatsapp-icone"></i> <strong>(21)
+                        <span><img src="./img/whatsapp.svg" alt="whatsapp-icone"></i> <strong>(21)
                                 98809-3755</strong></span>
                     </a>
                 </div>
                 <div class="whatsapp-right">
                     <!-- <img src="/img/smartphone.webp" alt="smartphone"> -->
-                    <img src="/img/mulher-ilustracao.jpg" alt="smartphone">
+                    <img src="./img/mulher-ilustracao.jpg" alt="smartphone">
                     <div class="whatsapp-right-footer">
-                        <img src="/img/check.svg" alt="check">
+                        <img src="./img/check.svg" alt="check">
                         <span>O selo de perfil verificado e o número exclusivo da Meu Acerto garantem a sua segurança
                             nesse processo!</span>
                     </div>
@@ -106,17 +106,17 @@
                     <p>Aqui a sua negociação é simples, digital e do <strong>seu jeito!</strong></p>
                 </div>
                 <div class="diferencial-lista-item">
-                    <img src="/img/sem-ligacoes.svg" alt="sem-ligacoes">
+                    <img src="./img/sem-ligacoes.svg" alt="sem-ligacoes">
                     <h3>Sem ligações chatas</h3>
                     <p>Resolva tudo no seu tempo, sem telefonemas fora de hora.</p>
                 </div>
                 <div class="diferencial-lista-item">
-                    <img src="/img/negociacao-seu-jeito.svg" alt="negociacao-seu-jeito">
+                    <img src="./img/negociacao-seu-jeito.svg" alt="negociacao-seu-jeito">
                     <h3>Negociação do seu jeito</h3>
                     <p>Diga como e o quanto pode pagar para chegarmos à uma negociação justa.</p>
                 </div>
                 <div class="diferencial-lista-item">
-                    <img src="/img/sem-burocracia.svg" alt="sem-burocracia">
+                    <img src="./img/sem-burocracia.svg" alt="sem-burocracia">
                     <h3>Rápido e sem burocracia</h3>
                     <p>Você só precisa de 05 minutos para negociar!</p>
                 </div>
@@ -126,17 +126,17 @@
         <section id="features">
             <div class="features-container-item">
                 <h3>Poder de negociação</h3>
-                <img src="/img/poder-negociacao.svg" alt="dinheiro-mao">
+                <img src="./img/poder-negociacao.svg" alt="dinheiro-mao">
                 <p>Negocie da forma mais simplificada possível.</p>
             </div>
             <div class="features-container-item">
                 <h3>Limpe o seu nome</h3>
-                <img src="/img/limpe-seu-nome.svg" alt="nome-limpo">
+                <img src="./img/limpe-seu-nome.svg" alt="nome-limpo">
                 <p>O seu nome limpo em até 05 dias úteis.</p>
             </div>
             <div class="features-container-item">
                 <h3>Descontos exclusivos</h3>
-                <img src="/img/descontos.svg" alt="imagem-porcentagem">
+                <img src="./img/descontos.svg" alt="imagem-porcentagem">
                 <p>Condições especiais na sua negociação.</p>
             </div>
         </section>
