Altera nome logo

--- a/index.html
+++ b/index.html
@@ -79,12 +79,12 @@
                     <h2>Prefere negociar pelo whatsapp?</h2>
                     <p>Mande um "oi" pra gente e nós vamos te mostrar as dívidas disponíveis para negociação.</p>
                     <p>E o melhor: por lá, você também pode aproveitar os <strong>descontos imperdíveis e as condições
-                            flexíveis de parcelamento que só a MP Advogados oferece!</strong>
+                            flexíveis de parcelamento que só a LogoSite oferece!</strong>
                     </p>
                     <a href="#">
                         <span>Negocie pelo WhatsApp</span>
                         <span><img src="./img/whatsapp.svg" alt="whatsapp-icone"></i> <strong>(21)
-                                98809-3755</strong></span>
+                                98275-2847</strong></span>
                     </a>
                 </div>
                 <div class="whatsapp-right">
