Altera info logo

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                     <img src="./img/mulher-ilustracao.jpg" alt="smartphone">
                     <div class="whatsapp-right-footer">
                         <img src="./img/check.svg" alt="check">
-                        <span>O selo de perfil verificado e o número exclusivo da Meu Acerto garantem a sua segurança
+                        <span>O selo de perfil verificado e o número exclusivo garantem a sua segurança
                             nesse processo!</span>
                     </div>
                 </div>
