--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <figure>
                 <a href="/">
                     <!-- <img src="/img/logo.png" alt="logo"> -->
-                    LogoSite
+                    MP Peixoto
                 </a>
             </figure>
             <nav>
@@ -52,19 +52,18 @@
             <div class="main-hero-container">
                 <div class="main-hero-left">
                     <div class="main-hero-left-header">
-                        <h1>Nunca foi tão fácil negociar suas dívidas</h1>
-                        <p>Sua liberdade financeira está a poucos cliques de você!</p>
+                        <h1 style="font-size: 3rem;">Negocie <strong>hoje</strong> mesmo suas dívidas!</h1>
+                        <p>Sua liberdade financeira a poucos cliques de você.</p>
                     </div>
                     <div class="main-hero-left-card">
-                        <h1>Consulte suas dívidas</h1>
+                        <h1>Consulte seu CPF ou CNPJ</h1>
                         <p>É rápido e totalmente gratuito!</p>
                         <form action="">
-                            <input inputmode="numeric" placeholder="Digite seu CPF">
-                            <button type="submit">Consultar CPF</button>
+                            <input id="cpfcnpj" inputmode="numeric" placeholder="Digite seu CPF ou CNPJ">
+                            <button type="submit">Consultar</button>
                         </form>
                     </div>
                     <div class="main-hero-left-footer">
-                        <img src="./img/selo-anti-fraude.svg" alt="selo-anti-fraude">
                     </div>
                 </div>
                 <div class="main-hero-right">
@@ -76,13 +75,14 @@
         <section id="whatsapp-section">
             <div class="whatsapp-container">
                 <div class="whatsapp-left">
-                    <h2>Prefere negociar pelo whatsapp?</h2>
-                    <p>Mande um "oi" pra gente e nós vamos te mostrar as dívidas disponíveis para negociação.</p>
-                    <p>E o melhor: por lá, você também pode aproveitar os <strong>descontos imperdíveis e as condições
-                            flexíveis de parcelamento que só a LogoSite oferece!</strong>
+                    <h2>Prefere negociar pelo WhatsApp?</h2>
+                    <p>Clique no botão abaixo para mostrarmos as dívidas disponíveis para negociação.</p>
+
+                    <p>E o melhor: você pode aproveitar <strong>descontos imperdíveis e condições
+                            flexíveis de parcelamento.</strong>
                     </p>
                     <a href="#">
-                        <span>Negocie pelo WhatsApp</span>
+                        <span>Mande um "oi" pra gente</span>
                         <span><img src="./img/whatsapp.svg" alt="whatsapp-icone"></i> <strong>(21)
                                 98275-2847</strong></span>
                     </a>
@@ -91,9 +91,9 @@
                     <!-- <img src="/img/smartphone.webp" alt="smartphone"> -->
                     <img src="./img/mulher-ilustracao.jpg" alt="smartphone">
                     <div class="whatsapp-right-footer">
-                        <img src="./img/check.svg" alt="check">
+                        <!-- <img src="./img/check.svg" alt="check">
                         <span>O selo de perfil verificado e o número exclusivo garantem a sua segurança
-                            nesse processo!</span>
+                            nesse processo!</span> -->
                     </div>
                 </div>
             </div>
@@ -102,42 +102,83 @@
         <section id="diferencial-section">
             <div class="diferencial-lista">
                 <div class="diferencial-lista-h2">
-                    <h2>Por que a LogoSite?</h2>
+                    <h2>Vantagens de negociar com a gente</h2>
                     <p>Aqui a sua negociação é simples, digital e do <strong>seu jeito!</strong></p>
                 </div>
                 <div class="diferencial-lista-item">
-                    <img src="./img/sem-ligacoes.svg" alt="sem-ligacoes">
-                    <h3>Sem ligações chatas</h3>
-                    <p>Resolva tudo no seu tempo, sem telefonemas fora de hora.</p>
+                    <!-- <img src="./img/talk.png" alt="sem-ligacoes"> -->
+                    <i class="fas fa-comments fa-5x"></i>
+                    <h3>Simples, rápido, fácil</h3>
+                    <p>Resolva tudo de forma online e sem burocracia. Plataforma disponível 24h.</p>
                 </div>
                 <div class="diferencial-lista-item">
-                    <img src="./img/negociacao-seu-jeito.svg" alt="negociacao-seu-jeito">
-                    <h3>Negociação do seu jeito</h3>
-                    <p>Diga como e o quanto pode pagar para chegarmos à uma negociação justa.</p>
+                    <!-- <img src="./img/negociacao-seu-jeito.png" alt="negociacao-seu-jeito"> -->
+                    <i class="fas fa-hand-holding-usd fa-5x"></i>
+                    <h3>Pagamento facilitado</h3>
+                    <p>Tenha condições e descontos especiais na sua negociação.</p>
                 </div>
                 <div class="diferencial-lista-item">
-                    <img src="./img/sem-burocracia.svg" alt="sem-burocracia">
-                    <h3>Rápido e sem burocracia</h3>
-                    <p>Você só precisa de 05 minutos para negociar!</p>
+                    <!-- <img src="./img/sem-burocracia.svg" alt="sem-burocracia"> -->
+                    <i class="fas fa-clock fa-5x"></i>
+                    <h3>Agilidade e segurança</h3>
+                    <p>Negocie em poucos minutos, de forma simples, porém, segura.</p>
                 </div>
             </div>
         </section>
 
         <section id="features">
-            <div class="features-container-item">
-                <h3>Poder de negociação</h3>
-                <img src="./img/poder-negociacao.svg" alt="dinheiro-mao">
-                <p>Negocie da forma mais simplificada possível.</p>
+            <div>
+                <div>
+                    <h2>Passo a passo</h2>
+                    <p>Como funciona a negociação com a MP Peixoto?</p>
+                </div>
             </div>
             <div class="features-container-item">
-                <h3>Limpe o seu nome</h3>
-                <img src="./img/limpe-seu-nome.svg" alt="nome-limpo">
-                <p>O seu nome limpo em até 05 dias úteis.</p>
+                <i class="far fa-address-card fa-5x"></i>
+                <h5>Informe seu número de CPF para lhe identificarmos</h5>
             </div>
             <div class="features-container-item">
-                <h3>Descontos exclusivos</h3>
-                <img src="./img/descontos.svg" alt="imagem-porcentagem">
-                <p>Condições especiais na sua negociação.</p>
+                <i class="fas fa-list-ol fa-5x"></i>
+                <h5>Escolha o contrato e o melhor acordo para você</h5>
+            </div>
+            <div class="features-container-item">
+                <i class="far fa-handshake fa-5x"></i>
+                <h5>Escolha a melhor forma de pagamento e confirme sua negociação</h5>
+            </div>
+        </section>
+
+        <section id="contact">
+            <div class="contact-form">
+                <h2>Fale conosco</h2>
+                <p>Se preferir, preencha o formulário abaixo e envie-nos sua dúvida.</p>
+                <!-- <img src="/img/contact-background.png" alt=""> -->
+                <img id="freepik_stories-example" src="./img/contact-form.svg" alt="">
+                <form class="row g-3">
+                    <div class="form-floating col-md-12">
+                        <input type="text" class="form-control form-control-sm" id="inputAddress"
+                            placeholder="Seu nome">
+                        <label for="inputAddress">Seu nome</label>
+                    </div>
+                    <div class="form-floating col-md-12">
+                        <input type="email" class="form-control form-control-sm" id="inputEmail4"
+                            placeholder="Seu e-mail">
+                        <label for="inputEmail4">Seu e-mail</label>
+                    </div>
+                    <div class="form-floating col-md-12">
+                        <input type="text" class="form-control form-control-sm" id="inputAddress"
+                            placeholder="Seu telefone">
+                        <label for="inputAddress">Seu telefone</label>
+                    </div>
+                    <div class="form-floating col-md-12">
+                        <textarea class="form-control form-control-sm" placeholder="Sua mensagem" id="floatingTextarea"
+                            style="height: 100px"></textarea>
+                        <label for="floatingTextarea">Sua mensagem</label>
+                    </div>
+                    <div class="form-floating col-md-6">
+                        <button type="submit" class="btn btn-primary">Enviar</button>
+                    </div>
+                </form>
+
             </div>
         </section>
     </main>
@@ -145,7 +186,7 @@
     <footer>
         <div class="endereco">
             <!-- <img src="/img/logo.png" height="110" alt=""> -->
-            <h3>LogoSite</h3>
+            <h3>MP Peixoto</h3>
             <span>CNPJ: 53.044.979/0001-66</span>
             <span>Rua Almirante Barroso, 91</span>
             <span>Salas 907/908 Centro, Rio de Janeiro</span>
@@ -180,6 +221,16 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
     </script>
+    <script src="https://code.jquery.com/jquery-1.10.0.min.js"></script>
+    <script src="https://rawgit.com/RobinHerbots/Inputmask/3.x/dist/jquery.inputmask.bundle.js"></script>
+    <script>
+        $("input[id*='cpfcnpj']").inputmask({
+            mask: ['999.999.999-99', '99.999.999/9999-99'],
+            keepStatic: true
+        });
+    </script>
+    
+    
 </body>
 
 </html>
